Revert "fix: modify userRole when someone success login 2"
This reverts commit adbf01a7ca3d48eb1315c2a7100a2b4f22339a65.